Revise organization information and business status
Updated organization details, including status and licenses. Added notes regarding business operations and closures.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
           <h3>Prime Properties Real Estate Agency®</h3>
           <p class="operation-sector">Real estate services</p>
           <ul>
-            <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA</li>
+            <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA®</li>
             <li>Established in 2020</li>
             <li>
               <a>primepropertiesagency.com®</a>
               website was live between November 2020 to 4th December 2025
+              <span class="red">Closed</span>
             </li>
+            <li class="red">Status: Resume in 2027-28</li>
           </ul>
           <!-- false domains subsection  -->
           <div class="false-domains">
@@ -44,12 +46,12 @@
               <li>GSTIN Licence Issued Date : 02-07-2021</li>
               <li>GSTIN NO: 36AETPT2433F1Z7</li>
               <li>
-                Trade Mark License No: 5185464 - <span>Logo</span> (registered date:
-                11-03-2023)
+                Trade Mark License No: 5185464 - <span>Logo</span> (registered
+                date: 11-03-2023)
               </li>
               <li>
-                Trade Mark License No: 6084751 - <span>Wordmark</span> (registered date:
-                07-07-2024)
+                Trade Mark License No: 6084751 -
+                <span>Wordmark</span> (registered date: 07-07-2024)
               </li>
               <li>
                 Government Of Telangana Shops & Establishment License No:
@@ -85,7 +87,9 @@
             <li>
               <a>blossomdigitalshop.com</a>
               website is between April 2022 - 4th December 2025
+              <span class="red">Closed</span>
             </li>
+            <li class="red">Status: Resume in 2027-28</li>
           </ul>
           <!-- false domains subsection  -->
           <div class="false-domains">
@@ -104,8 +108,8 @@
               <li>GSTIN Licence Issued Date : 21-03-2022</li>
               <li>GSTIN No : 36AETPT2433F2Z6</li>
               <li>
-                Trademark Licence No : 5660425 - <span>Wordmark</span> (registered date:
-                28-09-2024)
+                Trademark Licence No : 5660425 -
+                <span>Wordmark</span> (registered date: 28-09-2024)
               </li>
               <li>Government Of Telangana Shops & Establishment Licence No</li>
               <li>SEA/HYD/ALO/03/0406022/2022</li>
@@ -143,8 +147,30 @@
           <h3>PraSanSri</h3>
           <p class="operation-sector">Transport services</p>
           <ul>
-            <li><a href="https://prasansri.com">https://prasansri.com</a></li>
+            <li>
+              prasansri.com website was live between May 2025 to 29th December
+              2025 <span class="red">Closed</span>
+            </li>
             <li>Owner Mrs. Sangeetha Tuma</li>
+            <li class="red">Status: Resume in 2027-28</li>
+          </ul>
+          <div class="false-domains">
+            <h4>
+              Domains not connected and inactive with complete domain rights
+            </h4>
+            <ul class="red">
+              <li><s>prasansri.com</s> 🚫</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- organization three: prasansri IT services -->
+        <div class="organization">
+          <h3>PraSanSri IT Services</h3>
+          <ul>
+            <li>Owner Mrs. Sangeetha Tuma</li>
+            <li>Active from 23rd November 2025 to 4th December 2025.</li>
+            <li class="red">Status: Permanently Closed on 4th December 2025</li>
           </ul>
         </div>
       </section>
@@ -153,32 +179,51 @@
         <h3>Telangana State Real Estate Regulatory Authority:</h3>
         <ul>
           <li>Authorized User: Sangeetha Tuma</li>
-          <li>
-            Requested for Revocation/ Cancellation of TG RERA No: A02400001060
-            on 15-09-2025
+          <li class="red">
+            License Issued on 18th Feb 2020 to 15-09-2025 not registered to any
+            Real estate company
           </li>
+          <li>
+            Requested for Withdraw/ Revocation/ Cancellation of TG RERA No:
+            A02400001060 on 15-09-2025
+          </li>
+          <li>Reason: Misuse</li>
         </ul>
       </section>
 
       <!-- NOTE -->
       <section>
         <h3 class="red">Note:</h3>
-        <ul>
-          <li class="red">
-            All above businesses are Active from Registered business
-            address.
+        <ul class="red">
+          <li>
+            All above businesses on HOLDING from 2020 and April 2022 onwards and
+            will continue till 2027-28
           </li>
-          <li class="red">
+          <li>All businesses will Resume in 2027-28</li>
+          <li>
             We don't have our business agents, agency or branches in other
             locations of Telangana, India, USA, UK, Canada and across Worldwide
           </li>
-          <li class="red">
+          <li>
             Misuse of business profile, business owner profile, business names,
-            brand name, mobile numbers through Physical or Online, any business
-            activity from Registered Business Address or other locations,
-            Intellectual Property/ Trademark Act are applicable for such misuse.
+            brand name, internet and mobile connections and numbers. Any
+            Physical or Online business activity from Registered Business
+            Address or other locations, Intellectual Property/ Trademark Act are
+            applicable for such misuse/activities
           </li>
-          <li class="red"><b>Websites Closed</b></li>
+          <li><b>Websites Closed</b></li>
+          <li>
+            <b class="red"> Reasons for Holding Businesses : <br /></b>Identity
+            theft/stealing and frauds/scams from 2020 onwards <br />
+            TG RERA Licence, Bank Accounts, stocks, GSTIN,PAN, Businesses name,
+            fake & Registered businesses address, websites, business owner name,
+            businesses emails, personal emails, internet & mobile connections
+            postpaid & prepaid, Microsoft outlook, all Google Services, Google
+            Meet, Google Ads, Media & Ads agencies, Digital Signature, Signature
+            Scam, WhatsApp, Social Media, Payment Gateways, G-pay, Google Pay
+            for business, PayU, BHIM UPI, Razor pay, Cash free, Shopify, Dharani
+            Website, Property Sale : land, flats and rental services
+          </li>
         </ul>
       </section>
 
@@ -225,11 +270,11 @@ Hyderabad Telangana India
         </div>
         <!-- END: section two, about me rant -->
       </section>
+      <footer>
+        <p>Powered by Sangeetha Tuma</p>
+        <p>Copyright @ 2025</p>
+        <p>All Rights Reserved</p>
+      </footer>
     </div>
-    <footer>
-      <p>Powered by Sangeetha Tuma</p>
-      <p>Copyright @ 2025</p>
-      <p>All Rights Reserved</p>
-    </footer>
   </body>
 </html>
