Update index.html with new content and structure

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
           <h3>Prime Properties Real Estate Agency®</h3>
           <p class="operation-sector">Real estate services</p>
           <ul>
-            <li>Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA®</li>
+            <li>
+              Owner, Founder & Sole Proprietor Mrs. SANGEETHA TUMA<span
+                class="red"
+                >®</span
+              >
+            </li>
             <li>Established in 2020</li>
             <li>
               <a>primepropertiesagency.com®</a>
@@ -140,6 +145,12 @@
               <li class="strike-through">sangeetha@blossomdigitalshop.com</li>
             </ul>
           </div>
+          <!-- remarks -->
+          <p>
+            <b>Remarks: </b>Email status checked on 27-12-2025, still ACTIVE and
+            misusing even after permanently deleting my Google Business Starter
+            admin & Email account along with bank account details
+          </p>
         </div>
 
         <!-- organization three: prasansri  -->
@@ -178,17 +189,128 @@
       <section>
         <h3>Telangana State Real Estate Regulatory Authority:</h3>
         <ul>
-          <li>Authorized User: Sangeetha Tuma</li>
-          <li class="red">
-            License Issued on 18th Feb 2020 to 15-09-2025 not registered to any
-            Real estate company
-          </li>
-          <li>
-            Requested for Withdraw/ Revocation/ Cancellation of TG RERA No:
-            A02400001060 on 15-09-2025
-          </li>
-          <li>Reason: Misuse</li>
+          <li>Authorized User/ Agent: Sangeetha Tuma</li>
         </ul>
+        <ol>
+          <!-- one -->
+          <li>
+            <h5 class="underlined-caps">
+              TS RERA Registration certificate of real estate agent:
+            </h5>
+            <ul class="sub-ul">
+              <li>
+                <b>Issued Date & Duration: </b><br />Commencing from
+                <b>18-02-2020</b> and Ending on <b>17-02-2025</b>
+              </li>
+              <li class="red"><b>Note:</b></li>
+              <ul class="sub-ul">
+                <li>
+                  TS RERA certificate/ uploaded documents
+                  <b class="red">invalid</b> from January 2023 onwards. Address
+                  changed in KYC
+                </li>
+                <li>
+                  <b class="red">Invalid</b> TS RERA Certificate and many
+                  uploaded documents from <b>01-06-2024</b> Onwards. Certificate
+                  Regenerated/ Renewed.
+                </li>
+              </ul>
+            </ul>
+          </li>
+          <!-- two -->
+          <li>
+            <h5 class="underlined-caps">
+              TG RERA Registration certificate of real estate agent:
+            </h5>
+            <ul class="sub-ul">
+              <li>
+                <b>Issued Date & Duration: </b> <br />Commencing from
+                <b>01-06-2024</b> and Ending on <b>31-05-2029</b>
+              </li>
+              <li>
+                <b>Updated: </b><br />Surname <span class="red">Prefix</span> to
+                Suffix, address change, KYC and other documents
+              </li>
+              <li>
+                <b>Status: </b><br /><span class="red"
+                  >Again TG RERA Certificate Regenerated/ Renewed</span
+                >
+              </li>
+              <li class="red"><b>Note:</b></li>
+              <ul class="sub-ul">
+                <li>
+                  Invalid TG RERA Certificate and many uploaded documents from
+                  <b>14-05-2025</b> onwards
+                </li>
+              </ul>
+            </ul>
+          </li>
+          <!-- three -->
+          <li>
+            <h5 class="underlined-caps">
+              TG RERA Registration certificate of real estate agent:
+            </h5>
+            <ul class="sub-ul">
+              <li>
+                <b>Issued Date & Duration: </b><br />Commencing from
+                <b>14-05-2025</b> and Ending on <b>13-05-2030</b>
+              </li>
+              <li><b>Updated: </b><br />KYC and other documents</li>
+              <!-- status -->
+              <li>
+                <b>Status: </b>
+                <ul class="sub-ul">
+                  <li class="red">
+                    Again TG RERA Certificate Regenerated/ Renewed
+                  </li>
+                  <li>
+                    TG RERA uploaded
+                    <span class="red">documents invalid</span> from
+                    <b>May 2025</b> Onwards, Changes in KYC
+                  </li>
+                  <li>
+                    Requested for Withdraw/ Revocation/ Cancellation of TG RERA
+                    No: A02400001060 on <b>15-09-2025</b>
+                  </li>
+                </ul>
+              </li>
+              <!-- reasons -->
+              <li>
+                <b>Reasons: </b>
+                <ul class="sub-ul">
+                  <li>
+                    Not used and Registered to any Real Estate Companies my TG
+                    RERA Certificate/ license as Authorized User/
+                    <b>Agent Sangeetha Tuma</b> from
+                    <b>18th February 2020</b> onwards and Withdrawing my TG RERA
+                    Agent Certificate/ license
+                  </li>
+                  <li>
+                    From 2020 onwards illegally Operated or Misuse my TS RERA &
+                    TG RERA Certificate/ License, business names, business owner
+                    name, businesses emails, personal emails, ICICI car
+                    insurance, other insurance Companies, financial services,
+                    Payment gateways, bank accounts and debit Cards, Bank of
+                    India, IDBI Bank, SBI, Kotak, Mahindra Bank, Central Bank of
+                    India, ICICI Bank, HDFC Bank and HDFC Credit Card, Google
+                    Maps & Ads, G-pay, GSTIN, PAN and many more....
+                  </li>
+                </ul>
+              </li>
+              <!-- misuse -->
+              <li>
+                <b>Misuse: </b><br />Internet & Mobile Postpaid & Prepaid
+                Connections of Jio, Airtel and Vodafone
+              </li>
+              <!-- Online & Physical Activity Locations -->
+              <li>
+                <b>Online & Physical Activity Locations: </b><br />Permanent
+                Residence & Registered Business address, Madhapur, Hyderabad,
+                Telangana, India, USA and other Countries
+              </li>
+            </ul>
+          </li>
+        </ol>
       </section>
 
       <!-- NOTE -->
@@ -222,7 +344,8 @@
             Meet, Google Ads, Media & Ads agencies, Digital Signature, Signature
             Scam, WhatsApp, Social Media, Payment Gateways, G-pay, Google Pay
             for business, PayU, BHIM UPI, Razor pay, Cash free, Shopify, Dharani
-            Website, Property Sale : land, flats and rental services
+            Website, Property Sale : land, flats and rental services and many
+            more...
           </li>
         </ul>
       </section>
@@ -271,8 +394,9 @@ Hyderabad Telangana India
         <!-- END: section two, about me rant -->
       </section>
       <footer>
+        <p>Official Website of Sangeetha Tuma®</p>
         <p>Powered by Sangeetha Tuma</p>
-        <p>Copyright @ 2025</p>
+        <p>Copyright @ 2025-26</p>
         <p>All Rights Reserved</p>
       </footer>
     </div>
