Restore full content of index.html
Restored the complete HTML structure and content for the index.html file, including sections for organizations and personal information.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,18 @@
           <div class="organization-licenses">
             <h4>
               Blossom Digital Shopping
-              <span class="red">(Trademark Withdrawn)</span>
+              <span class="red">(Wordmark Withdrawn)</span>
+              <div>
+                <p style="font-weight: bold; text-decoration: underline">
+                  Government of India Trademark Act & Intellectual Property
+                </p>
+                <p>
+                  <b class="red">Remarks</b>:<br />Meaningless and wrong
+                  information document uploaded along with
+                  <span class="red">Forged/fake signature</span> in Trademark
+                  Official website on <b>03-11-2025</b>
+                </p>
+              </div>
             </h4>
             <ul>
               <li>Application Date: 25-10-2023</li>
@@ -304,12 +315,17 @@
               </li>
               <!-- Online & Physical Activity Locations -->
               <li>
-                <b>Online & Physical Activity Locations: </b><br />Permanent
+                <b>Online & Physical Activities Locations: </b><br />Permanent
                 Residence & Registered Business address, Madhapur, Hyderabad,
                 Telangana, India, USA and other Countries
               </li>
             </ul>
           </li>
+          <!-- action -->
+           <li class="red" >
+              <h5 class="underlined-caps" style="font-size: 1rem;">Action required for such Frauds/ Scams:</h5>
+              <p style="font-size: 1rem;">Freeze & Remove: Bank accounts, Passport, License and Assets</p>
+           </li>
         </ol>
       </section>
 
