Restore index.html with original content

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <p>
                   <b class="red">Remarks</b>:<br />Meaningless and wrong
                   information document uploaded along with
-                  <span class="red">Forged/fake signature</span> in Trademark
+                  <span class="red">Forged/fake signature</span> in Government of India Trademark
                   Official website on <b>03-11-2025</b>
                 </p>
               </div>
@@ -418,3 +418,4 @@ Hyderabad Telangana India
     </div>
   </body>
 </html>
+
