Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -64,23 +64,66 @@
               </li>
             </ul>
           </div>
-          <!-- deleted email ids -->
-          <div class="red">
-            <h4>
-              <span class="red">Permanently deleted</span> Google Workspace
-              email on 24-05-2025
-            </h4>
+          <!--  -->
+          <div id="a3348">
+            <h3 class="red underline">Note:</h3>
+            <!-- deleted email ids -->
             <ul>
-              <li class="strike-through">
-                sangeethatuma@primepropertiesagency.com
+              <li class="red">
+                <h4>
+                  My Google Workspace Business Starter and Email account, Login
+                  account, admin account and Bank payment details Permanently
+                  Deleted on 24-05-2025
+                </h4>
+                <ul>
+                  <li class="strike-through">
+                    sangeethatuma@primepropertiesagency.com
+                  </li>
+                  <li class="strike-through">
+                    sangeetha@primepropertiesagency.com
+                  </li>
+                </ul>
               </li>
-              <li class="strike-through">
-                sangeetha@primepropertiesagency.com
+              <!-- invoice -->
+              <li>
+                <h4 class="red underline">
+                  Invoice issue and payment accepted:
+                </h4>
+                <ul>
+                  <li>
+                    <b>Google Asia Pacific Pte. Ltd,</b> 70 Pasir Panjang Road,
+                    #03-71, Mapletree Business City, Singapore 117371
+                  </li>
+                  <li>
+                    <b>Google Cloud India Pvt Ltd,</b> 7th Floor, FIFC Building,
+                    Plot No. C54 & 55, G Block Bandra Kurla Complex, Bandra
+                    (East), Mumbai, Maharashtra 400098, India
+                  </li>
+                  <li>
+                    <b>Squarespace Ireland Limited, Squarespace</b> House, Ship
+                    Street Great, D08 N12C, Ireland
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <!-- remarks -->
+          <div id="a3349">
+            <h3 class="red underline">Remarks:</h3>
+            <ul>
+              <li>Opted Service in December 2020</li>
+              <li>HDFC Credit Card payment details deleted in 2022/ 2023</li>
+              <li>
+                Emails status checked in Sep 2025 still <b>ACTIVE</b> and
+                misusing even after permanently deleting my Google Business
+                Starter login account, admin account and Email account along
+                with bank account details
               </li>
             </ul>
           </div>
         </div>
-
+        <!--  -->
+        <hr />
         <!-- organization two: blossom digital shopping -->
         <div class="organization">
           <h3>Blossom Digital Shopping</h3>
@@ -129,10 +172,11 @@
                   Government of India Trademark Act & Intellectual Property
                 </p>
                 <p>
-                  <b class="red">Remarks</b>:<br />Meaningless and wrong
-                  information document uploaded along with
-                  <span class="red">Forged/fake signature</span> in Government of India Trademark
-                  Official website on <b>03-11-2025</b>
+                  <b class="red">Remarks</b>:<br />Without business owner
+                  permission Meaningless and Wrong information document uploaded
+                  along with <span class="red">Forged/fake signature</span> in
+                  Government of India Trademark Official website on
+                  <b>03-11-2025</b>
                 </p>
               </div>
             </h4>
@@ -143,27 +187,66 @@
               <li>Name of Applicant/ Sole Proprietor: SANGEETHA TUMA</li>
             </ul>
           </div>
-          <!-- deleted email ids -->
-          <div class="red">
-            <h4>
-              <span class="red">Permanently deleted</span> Google Workspace
-              email on 24-05-2025
-            </h4>
+          <!-- note -->
+          <div id="a3350">
+            <h3 class="red underline">Note:</h3>
+            <!-- deleted email ids -->
             <ul>
-              <li class="strike-through">
-                sangeethatuma@blossomdigitalshop.com
+              <li class="red">
+                <h4>
+                  My Google Workspace Business Starter and Email account, Login
+                  account, admin account and Bank payment details Permanently
+                  Deleted on 24-05-2025
+                </h4>
+                <ul>
+                  <li class="strike-through">
+                    sangeethatuma@blossomdigitalshop.com
+                  </li>
+                  <li class="strike-through">
+                    sangeetha@blossomdigitalshop.com
+                  </li>
+                </ul>
               </li>
-              <li class="strike-through">sangeetha@blossomdigitalshop.com</li>
+              <!-- invoice -->
+              <li>
+                <h4 class="red underline">
+                  Invoice issue and payment accepted:
+                </h4>
+                <ul>
+                  <li>
+                    <b>Google India Private Limited,</b> Tower B, Unitech
+                    Signature Tower II, Sector 15, Part 1, Village Silokhera,
+                    Gurugram, Haryana 122002, India
+                  </li>
+                </ul>
+              </li>
             </ul>
           </div>
           <!-- remarks -->
-          <p>
-            <b>Remarks: </b>Email status checked on 27-12-2025, still ACTIVE and
-            misusing even after permanently deleting my Google Business Starter
-            admin & Email account along with bank account details
-          </p>
+          <!-- remarks -->
+          <div id="a3351">
+            <h3 class="red underline">Remarks:</h3>
+            <ul>
+              <li>Opted Service in April/ May 2022</li>
+              <li>
+                Login account, 19 invoices, admin account and HDFC Credit Card
+                Auto Payment details completly deleted in 2023
+              </li>
+              <li>
+                Registered business address and Permanent residence address
+                deleted many times
+              </li>
+              <li>
+                Email status checked in Sep 2025 and 27-12-2025, still ACTIVE
+                and misusing even after permanently deleting my Google Business
+                Starter login account, admin account & Email account along with
+                bank account details
+              </li>
+            </ul>
+          </div>
         </div>
-
+        <!--  -->
+        <hr />
         <!-- organization three: prasansri  -->
         <div class="organization">
           <h3>PraSanSri</h3>
@@ -185,7 +268,8 @@
             </ul>
           </div>
         </div>
-
+        <!--  -->
+        <hr />
         <!-- organization three: prasansri IT services -->
         <div class="organization">
           <h3>PraSanSri IT Services</h3>
@@ -196,7 +280,7 @@
           </ul>
         </div>
       </section>
-
+      <hr />
       <section>
         <h3>Telangana State Real Estate Regulatory Authority:</h3>
         <ul>
@@ -205,7 +289,7 @@
         <ol>
           <!-- one -->
           <li>
-            <h5 class="underlined-caps">
+            <h5 class="underline caps">
               TS RERA Registration certificate of real estate agent:
             </h5>
             <ul class="sub-ul">
@@ -230,7 +314,7 @@
           </li>
           <!-- two -->
           <li>
-            <h5 class="underlined-caps">
+            <h5 class="underline caps">
               TG RERA Registration certificate of real estate agent:
             </h5>
             <ul class="sub-ul">
@@ -258,7 +342,7 @@
           </li>
           <!-- three -->
           <li>
-            <h5 class="underlined-caps">
+            <h5 class="underline caps">
               TG RERA Registration certificate of real estate agent:
             </h5>
             <ul class="sub-ul">
@@ -280,90 +364,104 @@
                     <b>May 2025</b> Onwards, Changes in KYC
                   </li>
                   <li>
-                    Requested for Withdraw/ Revocation/ Cancellation of TG RERA
-                    No: A02400001060 on <b>15-09-2025</b>
+                    Request Submitted Online & Physical for Withdraw/ Revocation/
+                    Cancellation of TG RERA No: A02400001060 on
+                    <b>15-09-2025</b>
                   </li>
                 </ul>
               </li>
               <!-- reasons -->
               <li>
-                <b>Reasons: </b>
+                <b class="red underline"
+                  >Reasons for not using TS RERA/ TG RERA Certificate and
+                  Holding Businesses:
+                </b>
                 <ul class="sub-ul">
                   <li>
-                    Not used and Registered to any Real Estate Companies my TG
-                    RERA Certificate/ license as Authorized User/
+                    Not used and Registered to any Real Estate Companies my TS
+                    RERA/ TG RERA Certificate/ license as Authorized User/
                     <b>Agent Sangeetha Tuma</b> from
                     <b>18th February 2020</b> onwards and Withdrawing my TG RERA
                     Agent Certificate/ license
                   </li>
                   <li>
-                    From 2020 onwards illegally Operated or Misuse my TS RERA &
-                    TG RERA Certificate/ License, business names, business owner
-                    name, businesses emails, personal emails, ICICI car
-                    insurance, other insurance Companies, financial services,
-                    Payment gateways, bank accounts and debit Cards, Bank of
-                    India, IDBI Bank, SBI, Kotak, Mahindra Bank, Central Bank of
-                    India, ICICI Bank, HDFC Bank and HDFC Credit Card, Google
-                    Maps & Ads, G-pay, GSTIN, PAN and many more....
+                    <b
+                      >Identity theft/ stealing, illegally Operated or Misuse
+                      from 2020 and April 2022</b
+                    >
+                    onwarsd of TS RERA & TG RERA Certificate/ License, business
+                    names, brand name, business owner name, businesses emails,
+                    personal emails, Stocks, GSTIN, PAN, Digital Signature/
+                    Signature scam, Fraud in trademark, ICICI car insurance,
+                    other insurance companies, financial services, Payment
+                    Gateways, G-Pay, Google Pay for business, PayU, UPI,
+                    Razorpay, Cashfree, Shopify, bank accounts, debit cards,
+                    Bank of India, IDBI Bank, SBI, Kotak, Mahindra Bank, Central
+                    Bank of India, ICICI Bank, HDFC Bank and HDFC Credit Card,
+                    Google Maps, Google Ads, Google Meet, WhatsApp, Social
+                    Media, Media & Ads agencies, Fraud in Dharani website,
+                    Property Sale: Land, Flats and rental services and many
+                    more...
                   </li>
                 </ul>
               </li>
               <!-- misuse -->
               <li>
-                <b>Misuse: </b><br />Internet & Mobile Postpaid & Prepaid
-                Connections of Jio, Airtel and Vodafone
+                <b class="red underline">Fraud & Misuse: </b><br />Internet &
+                Mobile Postpaid & Prepaid Connections of Jio, Airtel and
+                Vodafone
               </li>
-              <!-- Online & Physical Activity Locations -->
+              <!-- misuse -->
               <li>
-                <b>Online & Physical Activities Locations: </b><br />Permanent
-                Residence & Registered Business address, Madhapur, Hyderabad,
-                Telangana, India, USA and other Countries
+                <b class="red underline">Misuse/ Activities: </b><br />Any
+                Physical or Online business activities from Registered Business
+                Address or from fake address from other locations, Intellectual
+                Property/ Trademark Act are applicable for such
+                misuse/activities.
+              </li>
+              <!-- misuse -->
+              <li>
+                <b
+                  ><span class="red underline">Websites Closed: </span> <br />
+                  primepropertiesagency.com®, blossomdigitalshop.com,
+                  bdsstyle.com and prasansri.com</b
+                >
+              </li>
+              <!-- misuse -->
+              <li>
+                <b class="red underline"
+                  >Businesses on HOLDING from 2020 and April 2022: </b
+                ><br />Prime Properties Real Estate Agency® and Blossom Digital
+                Shopping and BDS Style®, Prasansri businesses on
+                <b>HOLDING from 2020 and April 2022</b> onwards and will
+                continue until 2027-28
+              </li>
+              <!-- misuse -->
+              <li>
+                <b class="red underline">Businesses will Resume in 2027-28: </b
+                ><br />Prime Properties Real Estate Agency® and Blossom Digital
+                Shopping and BDS Style®, Prasansri businesses will resume in
+                2027-28
+              </li>
+              <!-- misuse -->
+              <li>
+                <b class="red underline">NOTE: </b><br />We don't have our
+                business agents, agencies or branches in other locations of
+                Hyderabad, Telangana, India, USA, UK, Canada, and across
+                Worldwide
               </li>
             </ul>
           </li>
           <!-- action -->
-           <li class="red" >
-              <h5 class="underlined-caps" style="font-size: 1rem;">Action required for such Frauds/ Scams:</h5>
-              <p style="font-size: 1rem;">Freeze & Remove: Bank accounts, Passport, License and Assets</p>
-           </li>
+          <li class="red">
+            <h5 id="c47" style="font-size: 1rem">
+              Action required for such Identity Theft & Frauds:
+            </h5>
+            <p style="font-size: 1rem">
+              Freeze & Remove Bank accounts, Passport, License and Assets
+            </p>
+          </li>
         </ol>
-      </section>
-
-      <!-- NOTE -->
-      <section>
-        <h3 class="red">Note:</h3>
-        <ul class="red">
-          <li>
-            All above businesses on HOLDING from 2020 and April 2022 onwards and
-            will continue till 2027-28
-          </li>
-          <li>All businesses will Resume in 2027-28</li>
-          <li>
-            We don't have our business agents, agency or branches in other
-            locations of Telangana, India, USA, UK, Canada and across Worldwide
-          </li>
-          <li>
-            Misuse of business profile, business owner profile, business names,
-            brand name, internet and mobile connections and numbers. Any
-            Physical or Online business activity from Registered Business
-            Address or other locations, Intellectual Property/ Trademark Act are
-            applicable for such misuse/activities
-          </li>
-          <li><b>Websites Closed</b></li>
-          <li>
-            <b class="red"> Reasons for Holding Businesses : <br /></b>Identity
-            theft/stealing and frauds/scams from 2020 onwards <br />
-            TG RERA Licence, Bank Accounts, stocks, GSTIN,PAN, Businesses name,
-            fake & Registered businesses address, websites, business owner name,
-            businesses emails, personal emails, internet & mobile connections
-            postpaid & prepaid, Microsoft outlook, all Google Services, Google
-            Meet, Google Ads, Media & Ads agencies, Digital Signature, Signature
-            Scam, WhatsApp, Social Media, Payment Gateways, G-pay, Google Pay
-            for business, PayU, BHIM UPI, Razor pay, Cash free, Shopify, Dharani
-            Website, Property Sale : land, flats and rental services and many
-            more...
-          </li>
-        </ul>
       </section>
 
       <hr />
@@ -418,4 +516,3 @@ Hyderabad Telangana India
     </div>
   </body>
 </html>
-
