Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -386,13 +386,13 @@
                   </li>
                   <li>
                     <b
-                      >Identity theft/ stealing, illegally Operated or Misuse
+                      >Illegally Operated or Misuse
                       from 2020 and April 2022</b
                     >
                     onwarsd of TS RERA & TG RERA Certificate/ License, business
                     names, brand name, business owner name, businesses emails,
                     personal emails, Stocks, GSTIN, PAN, Digital Signature/
-                    Signature scam, Fraud in trademark, ICICI car insurance,
+                    Signature scam, ICICI car insurance,
                     other insurance companies, financial services, Payment
                     Gateways, G-Pay, Google Pay for business, PayU, UPI,
                     Razorpay, Cashfree, Shopify, bank accounts, debit cards,
@@ -455,7 +455,7 @@
           <!-- action -->
           <li class="red">
             <h5 id="c47" style="font-size: 1rem">
-              Action required for such Identity Theft & Frauds:
+              Action required for such Frauds:
             </h5>
             <p style="font-size: 1rem">
               Freeze & Remove Bank accounts, Passport, License and Assets
@@ -516,3 +516,4 @@ Hyderabad Telangana India
     </div>
   </body>
 </html>
+
