Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
                     <b>May 2025</b> Onwards, Changes in KYC
                   </li>
                   <li>
-                    Request Submitted Online & Physical for Withdraw/ Revocation/
-                    Cancellation of TG RERA No: A02400001060 on
+                    Request Submitted Online & Physical for Withdraw/
+                    Revocation/ Cancellation of TG RERA No: A02400001060 on
                     <b>15-09-2025</b>
                   </li>
                 </ul>
@@ -385,23 +385,19 @@
                     Agent Certificate/ license
                   </li>
                   <li>
-                    <b
-                      >Illegally Operated or Misuse
-                      from 2020 and April 2022</b
-                    >
+                    <b>Illegally Operated or Misuse from 2020 and April 2022</b>
                     onwarsd of TS RERA & TG RERA Certificate/ License, business
                     names, brand name, business owner name, businesses emails,
                     personal emails, Stocks, GSTIN, PAN, Digital Signature/
-                    Signature scam, ICICI car insurance,
-                    other insurance companies, financial services, Payment
-                    Gateways, G-Pay, Google Pay for business, PayU, UPI,
-                    Razorpay, Cashfree, Shopify, bank accounts, debit cards,
-                    Bank of India, IDBI Bank, SBI, Kotak, Mahindra Bank, Central
-                    Bank of India, ICICI Bank, HDFC Bank and HDFC Credit Card,
-                    Google Maps, Google Ads, Google Meet, WhatsApp, Social
-                    Media, Media & Ads agencies, Fraud in Dharani website,
-                    Property Sale: Land, Flats and rental services and many
-                    more...
+                    Signature scam, ICICI car insurance, other insurance
+                    companies, financial services, Payment Gateways, G-Pay,
+                    Google Pay for business, PayU, UPI, Razorpay, Cashfree,
+                    Shopify, bank accounts, debit cards, Bank of India, IDBI
+                    Bank, SBI, Kotak, Mahindra Bank, Central Bank of India,
+                    ICICI Bank, HDFC Bank and HDFC Credit Card, Google Maps,
+                    Google Ads, Google Meet, WhatsApp, Social Media, Media & Ads
+                    agencies, Fraud in Dharani website, Property Sale: Land,
+                    Flats and rental services and many more...
                   </li>
                 </ul>
               </li>
@@ -414,10 +410,13 @@
               <!-- misuse -->
               <li>
                 <b class="red underline">Misuse/ Activities: </b><br />Any
-                Physical or Online business activities from Registered Business
-                Address or from fake address from other locations, Intellectual
-                Property/ Trademark Act are applicable for such
-                misuse/activities.
+                activities with name as T Sangeetha, Tuma Sangeetha,
+                K.Sangeetha, Sangeetha Kandrigal, Late. Man Mohan Das Kandrigal
+                and Smt. Saraswathi Kandrigal with fake bank accounts, PAN,
+                Aadhaar, Email, Mobile no, and any Physical or Online business activities from
+                Registered Business Address or from fake address from other
+                locations, Intellectual Property/ Trademark Act are applicable
+                for such misuse/activities.
               </li>
               <!-- misuse -->
               <li>
@@ -490,9 +489,15 @@
           </div>
         </div>
         <ul>
+          <li>
+            Mrs. Sangeetha Tuma & Sangeetha Kandrigal <b>W/o</b> Mr. Sridharnath
+            Tuma
+          </li>
+          <li>
+            <b>D/o</b> Late. Man Mohan Das Kandrigal & Smt. Saraswathi Kandrigal
+          </li>
           <li>Married: August 1998</li>
-          <li>Spouse: Mr.SRIDHARNATH TUMA</li>
-          <li>Son: Mr. PRANAV TUMA</li>
+          <li>Son: Mr. Pranav Tuma</li>
         </ul>
         <div class="address">
           <p class="red">Permanent Residence & Registered Office Address:</p>
@@ -516,4 +521,3 @@ Hyderabad Telangana India
     </div>
   </body>
 </html>
-
